# enterprise-ai-data-governance-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/samples/: marketing_campaigns.csv
docker/postgres/init/: 01_schema.sql  02_seed.sql
docs/: git_github_workflow.md  lesson_03_python_project_structure.md  lesson_04_docker.md  lesson_05_postgres.md  lesson_06_minio.md  lesson_07_data_ingestion.md  lesson_08_spark.md  lesson_09_airflow.md  lesson_10_delta_lake.md  lesson_11_dbt_core.md  lesson_12_great_expectations.md  lesson_13_metadata_catalog.md  lesson_14_pii_detection.md  lesson_15_lineage.md  lesson_16_embeddings.md  lesson_17_qdrant.md  lesson_18_rag_retrieval.md  lesson_19_llm_answer_layer.md  lesson_20_ai_agent.md
jobs/spark/: build_campaign_delta_table.py  build_campaign_summary.py
quality/: __init__.py  gx_quality_checks.py
scripts/: answer_governance_question.py  build_embeddings.py  build_metadata_catalog.py  load_qdrant.py  retrieve_rag_context.py  run_governance_agent.py  run_ingestion.py  run_quality_checks.py  search_qdrant.py
src/governance_platform/: __init__.py  __main__.py  agent.py  catalog.py  cli.py  config.py  embeddings.py  ingestion.py  lineage.py  llm_answer.py  logging_config.py  pii.py  rag.py  vector_store.py
tests/: test_agent.py  test_catalog.py  test_config.py  test_embeddings.py  test_ingestion.py  test_lineage.py  test_llm_answer.py  test_pii.py  test_quality_checks.py  test_rag.py  test_vector_store.py
transformations/dbt/: dbt_project.yml  profiles.yml
(+11 files in other folders)
